# DREAM

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPERTIPS.txt  GIT.md  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  SPIHandler.cpp  cloc.sh  ionnotes.txt  testDREAM.sh  test_wave_spectrum.py
fvm/: BlockMatrix.cpp  CMakeLists.txt  DurationTimer.cpp  EquationSystem.cpp  Init.cpp  Interpolator1D.cpp  Interpolator3D.cpp  MILU.cpp  Matrix.cpp  MatrixInverter.cpp  NormEvaluator.cpp  QuantityData.cpp  TimeKeeper.cpp  UnknownQuantity.cpp  UnknownQuantityHandler.cpp
fvm/Equation/: .#DiffusionTerm.set.cpp  AdvectionDiffusionTerm.cpp  AdvectionInterpolationCoefficient.cpp  AdvectionTerm.cpp  AdvectionTerm.set.cpp  ConstantParameter.cpp  DiagonalComplexTerm.cpp  DiagonalLinearTerm.cpp  DiagonalQuadraticTerm.cpp  DiagonalTerm.cpp  DiffusionTerm.cpp  DiffusionTerm.set.cpp  Equation.cpp  EquationTerm.cpp  IdentityTerm.cpp  LinearTransientTerm.cpp  MomentQuantity.cpp  MomentQuantity.setel.cpp  Operator.cpp  PredeterminedParameter.cpp  PrescribedParameter.cpp  ScalarLinearTerm.cpp  TransientTerm.cpp  WeightedIdentityTerm.cpp  WeightedTransientTerm.cpp
fvm/Equation/BoundaryConditions/: PInternalBoundaryCondition.cpp  PXiAdvectionDiffusionBoundaryCondition.cpp  PXiExternalCross.cpp  PXiExternalCross.set.cpp  PXiExternalCrossCombined.cpp  PXiExternalKineticKinetic.cpp  PXiExternalKineticLower.cpp  PXiExternalKineticUpper.cpp  PXiExternalLoss.cpp  PXiInternalTrapping.cpp  XiInternalBoundaryCondition.cpp
fvm/Grid/: AnalyticBRadialGridGenerator.cpp  BounceAverager.avalancheDelta.cpp  BounceAverager.cpp  BounceSurfaceMetric.cpp  BounceSurfaceQuantity.cpp  CylindricalRadialGridGenerator.cpp  EmptyMomentumGrid.cpp  EmptyRadialGridGenerator.cpp  FluxSurfaceAverager.avalancheChiu.cpp  FluxSurfaceAverager.avalancheDelta.cpp  FluxSurfaceAverager.cpp  FluxSurfaceQuantity.cpp  Grid.cpp  GridDimension.cpp  MagneticQuantityHandler.cpp  MomentumGrid.cpp  NumericBRadialGridGenerator.LUKE.cpp  NumericBRadialGridGenerator.cpp  RadialGrid.cpp  RadialGridGenerator.cpp
fvm/Grid/PXiGrid/: PBiUniformGridGenerator.cpp  PCustomGridGenerator.cpp  PInternalBoundaryCondition.cpp  PUniformGridGenerator.cpp  PXiMomentumGrid.cpp  PXiMomentumGridGenerator.cpp  PXiMomentumGridGenerator.hpp  XiBiUniformGridGenerator.cpp  XiBiUniformThetaGridGenerator.cpp  XiCustomGridGenerator.cpp  XiInternalBoundaryCondition.cpp  XiTrappedPassingBoundaryLayerGridGenerator.cpp  XiUniformGridGenerator.cpp  XiUniformThetaGridGenerator.cpp
fvm/Grid/Stellarator/: EmptyRadialGridGenerator.cpp  EmptyStellaratorRadialGridGenerator.cpp  FluxSurfaceAverager.cpp  FluxSurfaceAveragerStellarator.cpp  Interpolator3DSpatial.cpp  NumericBRadialGridGenerator.DESC.cpp  NumericBRadialGridGenerator.cpp  NumericBRadialGridGeneratorBoozer.cpp  NumericStellaratorRadialGridGenerator.cpp  RadialGrid.cpp  RadialGridGeneratorStellarator.cpp  RadialGridStellarator.cpp  StellaratorRadialGridGenerator.cpp
fvm/Solvers/: MIGMRES.cpp  MIKSP.cpp  MILU.cpp  MIMKL.cpp  MIMUMPS.cpp  MISuperLU.cpp
iface/: CMakeLists.txt  Main.cpp
pyface/: CMakeLists.txt  SFile_Python.cpp  dreampy.cpp  settings.cpp
src/: ADAS.cpp  ADASRateInterpolator.cpp  AMJUEL.cpp  CMakeLists.txt  Constants.cpp  ConvergenceChecker.cpp  DiagonalPreconditioner.cpp  EqsysInitializer.cpp  EqsysInitializer.nonlinear.cpp  EquationSystem.cpp  IO.cpp  Init.cpp  IonHandler.cpp  IonInterpolator1D.cpp  MeanExcitationEnergyData  MultiInterpolator1D.cpp  NBIHandler.cpp  NIST.cpp  OtherQuantity.cpp  OtherQuantityHandler.cpp  OutputGenerator.cpp  OutputGeneratorSFile.cpp  PostProcessor.cpp  QuantityData.cpp  Simulation.cpp  UnknownQuantityEquation.cpp  gdb.x
src/Atomics/: kineticionizationdata.cpp  kineticionizationdata.manual.cpp  nistdata_binding.cpp  nistdata_ionization.cpp
src/EquationSystem/: EquationSystem.cpp  Info.cpp  Save.cpp
src/Equations/: AdaptiveMHDLikeTransportTerm.cpp  AnalyticDistribution.cpp  AnalyticDistributionHottail.cpp  AnalyticDistributionRE.cpp  BootstrapCurrent.cpp  CollisionFrequency.cpp  CollisionFrequencyCreator.cpp  CollisionQuantity.cpp  CollisionQuantityHandler.cpp  ConnorHastie.cpp  CoulombLogarithm.cpp  DreicerNeuralNetwork.cpp  EffectiveCriticalField.cpp  FluidSourceTerm.cpp  FrozenCurrentCoefficient.cpp  FrozenCurrentCoefficient_D.cpp  FrozenCurrentCoefficient_I.cpp  FrozenCurrentTransport.cpp  KnockOnOperator.cpp  KnockOnUtilities.cpp  MeanExcitationEnergy_Extended.cpp  ParallelDiffusionFrequency.cpp  PartialScreeningFactorWalkowiak.cpp  PitchScatterFrequency.cpp  REPitchDistributionAveragedBACoeff.cpp  RunawayFluid.UFunc.cpp  RunawayFluid.UFuncApprox.cpp  RunawayFluid.UFuncExact.cpp  RunawayFluid.cpp  RunawaySourceTerm.cpp  RunawaySourceTermHandler.cpp  SPIHandler.cpp  SlowingDownFrequency.cpp  TransportBC.cpp  TransportPrescribed.cpp  TransportPrescribedBC.cpp
src/Equations/ADAS_data/: acd89_ar.txt  acd96_be.txt  acd96_c.txt  acd96_h.txt  acd96_ne.txt  plt89_ar.txt  plt96_be.txt  plt96_c.txt  plt96_h.txt  plt96_ne.txt  prb89_ar.txt  prb96_be.txt  (+8 more)
src/Settings/: CollisionQuantityHandler.cpp  Constants.cpp  DefineOptions.cpp  EquationSystem.cpp  EquationTrigger.cpp  IonEquilibrium.cpp  IonHandler.cpp  KineticGrid.cpp  LoadPrescribedData.cpp  OtherQuantityHandler.cpp  Preconditioner.cpp  Process.cpp  RadialGrid.cpp  RunawayFluid.cpp  RunawaySourceTerms.cpp  SFile.cpp  SPIHandler.cpp  Settings.cpp  Solver.cpp  TimeStepper.cpp  Tolerances.cpp  Transport.cpp  WaveSpectrum.cpp
src/Solver/: Backtracker.cpp  ExternalIterator.cpp  NewtonStepAdjuster.cpp  NumericalJacobian.cpp  PhysicalStepAdjuster.cpp  SNES_helpers.cpp  Solver.cpp  SolverLinearlyImplicit.cpp  SolverNonLinear.cpp  SolverSNES.cpp  SolverSNES.numjac.cpp
src/TimeStepper/: TimeStepper.cpp  TimeStepperAdaptive.cpp  TimeStepperConstant.cpp  TimeStepperIonization.cpp  TimeStepperPrescribed.cpp
src/Trigger/: ColdElectronDensityRiseCondition.cpp  EquationTriggerCondition.cpp  TimeTrigger.cpp
tests/cxx/: CMakeLists.txt  UnitTest.cpp  UnitTest.grids.cpp  runtest.cpp
(+1124 files in other folders)
